[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Erik/MainMenu.png" type="Texture" id=1]
[ext_resource path="res://UIElements/MainMenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://UIElements/LevelSelectScreen.tscn" type="PackedScene" id=5]

[node name="MainMenu" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.6
margin_left = 818.0
margin_top = 246.0
margin_right = 166.0
margin_bottom = 246.0
custom_constants/separation = 83
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="Control" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 93.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 176.0
margin_right = 500.0
margin_bottom = 242.0

[node name="LevelSelectButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 325.0
margin_right = 500.0
margin_bottom = 391.0
text = "Level Select"

[node name="QuitButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 474.0
margin_right = 500.0
margin_bottom = 540.0
text = "Quit"

[node name="LevelSelectScreen" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
